<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorOnPrimary"
    android:weightSum="10"
    tools:context=".PlayMusicActivity">

    <!-- Add the Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/musicIcon"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/musical_notes"
            android:importantForAccessibility="no" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="6"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/songImg"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"
            android:src="@drawable/musical_notes" />

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/previousBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/previous_btn_img"
                android:backgroundTint="@android:color/holo_blue_light"
                android:contentDescription="@string/previous_button_description"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pauseBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/pause_btn_img"
                android:backgroundTint="@android:color/holo_blue_light"
                android:contentDescription="@string/pause_button_description"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/next_btn_img"
                android:backgroundTint="@android:color/holo_blue_light"
                android:contentDescription="@string/next_button_description"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBar"
                android:layout_alignParentStart="true"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBar"
                android:layout_alignParentEnd="true"
                android:text="@string/_03_00"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>