<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorOnPrimary"
    android:layout_height="match_parent">

    <!-- Add the Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ListView
        android:id="@+id/mySongListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/toolbar" />

    <TextView
        android:id="@+id/statusTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_message"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/fileStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_status"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/giveAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="invisible"
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
